--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,7 @@
         "shared_mutex": "cpp",
         "thread": "cpp",
         "typeindex": "cpp",
-        "climits": "cpp"
+        "climits": "cpp",
+        "queue": "cpp"
     }
 }
