"CSES TWO_SET_DP PROBLEM SOLVED USING MEMOIZATION AND TABULATION BOTH"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,8 @@
         "scoped_allocator": "cpp",
         "shared_mutex": "cpp",
         "thread": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "stack": "cpp",
+        "queue": "cpp"
     }
 }
